Setting debug to false, adding logo files, and setting up home page to redirect to coming soon page while page is under construction

--- a/templates/coming-soon.html
+++ b/templates/coming-soon.html
@@ -7,6 +7,7 @@
         <title>Coming Soon</title>
         {% load static %}
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
+        <link rel="icon" type="image/ico" href="{% static 'images/logo/favicon.ico' %}" >
         <link rel="preload" href="{% static 'images/services/exteriors.webp' %}">
     </head>
     <body>
@@ -20,8 +21,8 @@
                     Check us out on our social media or give us a call to find out more in the meantime!
                 </p>
                 <div class="socials">
-                    <a href="" class="social"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="tel:" class="social"><i class="fa-solid fa-phone"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/profile.php?id=61558919942111" class="social"><i class="fa-brands fa-facebook-f"></i></a>
+                    <a href="tel:+17206438146" class="social"><i class="fa-solid fa-phone"></i></a>
                 </div>
             </div>
         </section>
