--- a/templates/about.html
+++ b/templates/about.html
@@ -2,15 +2,16 @@
 {% load static %}
 
 {% block seo %} 
-<meta property="og:title" content=""/>
-<meta property="og:url" content=""/>
-<meta property="og:image" content=""/>
+<meta property="og:title" content="About Home Revive | Denver Remodel & repair experts"/>
+<meta property="og:url" content="https://homerevivellc.net/about"/>
+<meta property="og:image" content="{% static 'images/about/about-hero.webp' %}"/>
 <meta property=”og:image:width” content=”1200″/>
 <meta property=”og:image:height” content=”630″/>
-<meta property="og:description" content=""/>
-<meta property="og:type" content="website">
-<meta name="description" content="">
-<link rel="canonical" href="">
+<meta property="og:description" content="All our projects have 2 things. A commitment to quality work and amazing customer service. No matter what challenges we face."/>
+<meta property="og:type" content="article">
+<meta name="description" content="All our projects have 2 things. A commitment to quality work and amazing customer service. No matter what challenges we face.">
+<link rel="canonical" href="https://homerevivellc.net/about">
+<link rel="alternate" href="https://homerevivellc.net/about" hreflang="en"/>
 <!-- Preload Images here -->
  <link rel="preload" href="{% static 'images/about/about-hero.webp' %}" as="image">
  <link rel="preload" href="{% static 'images/about/consultation.webp' %}" as="image">
@@ -20,7 +21,7 @@
 {% endblock %}
 
 {% block title %}
-About
+About Home Revive | Denver Remodel & repair experts
 {% endblock %}
 
 {% block about %} 
@@ -31,13 +32,16 @@ active-link
 <section class="about-hero">
     <div class="about-hero-info">
         <h1 class="title about-hero-title">
-            About M&B Remodeling
+            About Home Revive
         </h1>
         <p class="description about-hero-description">
-            I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
+            We bring over 8 years of expertise to every project, whether it’s a full home remodel, a simple improvement, or specialized work like fence and deck repairs or installations. 
+            We take pride in transforming spaces, from interior and exterior painting to flawless flooring and even appliance repair. 
+            Our team is dedicated to quality craftsmanship, ensuring every detail is handled with care and precision. 
+            When it comes to making your home look and feel brand new, Home Revive is the name you can trust.
         </p>
     </div>
-    <div class="about-hero-image background-image"></div>
+    <div class="about-hero-image background-image" title="Finished Kitchen"></div>
 </section>
 <section class="process">
     <div class="process-info">
@@ -45,53 +49,59 @@ active-link
             Our Process
         </h2>
         <p class="description">
-            I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font.
+            Our process begins with a free consultation where we come to you, listen to your ideas, and help shape your vision right in the space we’ll be working on. 
+            From there, we develop a detailed plan tailored to your needs and budget, keeping you informed every step of the way. Our skilled team then gets to work, using top-quality materials and craftsmanship to bring your project to life. Throughout the process, we’re committed to excellent customer service, ensuring your satisfaction at every phase. 
+            When we hand over the finished product, it’s not just a completed project—it’s your vision, expertly crafted with care and precision.
         </p>
     </div>
     <div class="process-list">
         <div class="process-item">
-            <img src="{% static 'images/about/design.webp' %}" alt="" class="item-image">
+            <img src="{% static 'images/about/consultation.webp' %}" alt="Initial consultation to outline project needs" class="item-image">
             <div class="item-info">
                 <h3 class="item-title">
-                    Preconstruction Design
+                    On-Site Consultation
                 </h3>
                 <p class="description">
-                    I'm a paragraph. Click here to add your own text and edit me. Let your users get to know you.
+                    The perfect way to discuss your vision in person and get expert advice tailored to your space. 
+                    We’ll walk through the details together, ensuring we understand your needs and can provide the best solutions for your home project.
                 </p>
             </div>
         </div>
         <div class="process-item">
-            <img src="{% static 'images/about/estimate.webp' %}" alt="" class="item-image">
+            <img src="{% static 'images/about/design.webp' %}" alt="Construction blueprints for designing project" class="item-image">
             <div class="item-info">
                 <h3 class="item-title">
-                    Design & Construction Estimate
+                    Design & Estimate
                 </h3>
                 <p class="description">
-                    I'm a paragraph. Click here to add your own text and edit me. Let your users get to know you.
+                    We focus on understanding your goals and delivering a plan that aligns with your vision and budget. 
+                    Our estimates are crafted with transparency, so you know exactly what to expect from start to finish.
                 </p>
             </div>
         </div>
     </div>
     <div class="process-list">
         <div class="process-item item-reverse">
-            <img src="{% static 'images/about/consultation.webp' %}" alt="" class="item-image">
+            <img src="{% static 'images/about/estimate.webp' %}" alt="Working hard on carpentry project" class="item-image">
             <div class="item-info">
                 <h3 class="item-title">
-                    On-Site Consultations
+                    Project Updates
                 </h3>
                 <p class="description">
-                    I'm a paragraph. Click here to add your own text and edit me. Let your users get to know you.
+                    We keep you updated throughout the entire project and involved in the decision making process to make sure that we bring your vision to life. 
+                    This is your project, we are only here to bring it to life for you.
                 </p>
             </div>
         </div>
         <div class="process-item item-reverse">
-            <img src="{% static 'images/about/finish.webp' %}" alt="" class="item-image">
+            <img src="{% static 'images/about/finish.webp' %}" alt="Putting the finishing touches on a project" class="item-image">
             <div class="item-info">
                 <h3 class="item-title">
                     The Finishing Touches
                 </h3>
                 <p class="description">
-                    I'm a paragraph. Click here to add your own text and edit me. Let your users get to know you.
+                    Our priority is ensuring every detail meets your expectations. 
+                    We don’t consider the job complete until you’re completely satisfied with the final result, because this is your vision and that's what matters most to us.
                 </p>
             </div>
         </div>
@@ -102,13 +112,21 @@ active-link
         Our Quality Guarantee
     </h2>
     <p class="description guarantee-description">
-        I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.
+        Our commitment to quality begins with our dedication to using the best materials and proven techniques in every project we undertake. 
+        Whether we’re remodeling a kitchen, installing a new deck, or painting the exterior of your home, we source top-grade materials to ensure durability and a flawless finish. 
+        We believe that the foundation of any great project is the quality of the materials, so we never cut corners, ensuring your home improvements stand the test of time.
     </p>
     <p class="description guarantee-description">
-        This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors. Make your company stand out and show your visitors who you are.
+        Our team of experienced specialists brings meticulous attention to detail to every phase of your project. 
+        From the initial design and planning stages to the final touches, we work with precision and care to ensure everything is done right. 
+        We follow industry best practices and stay updated on the latest trends and techniques, allowing us to deliver results that not only meet but exceed your expectations. 
+        We understand that quality is in the details, so we take the time to get every aspect just right, ensuring your satisfaction.
     </p>
     <p class="description guarantee-description">
-        At Pixel Master Technologies we’re passionate about making templates that allow you to build fabulous websites and it’s all thanks to the support and feedback from users like you! Keep up to date with New Releases and what’s Coming Soon in Pixel Master Technologies ellaneous in Support. Feel free to tell us what you think and give us feedback in the Pixel Master Technologies Forum. If you’d like to benefit from a professional designer’s touch, head to the Pixel Master Technologies Arena and connect with one of our Pixel Master Technologies Pro designers. Or if you need more help you can simply type your questions into the Support Forum and get instant answers. To keep up to date with everything Pixel Master Technologies, including tips and things we think are cool, just head to the Pixel Master Technologies Blog!
+        At Home Revive, we’re not just committed to quality in our work; we’re committed to quality in our customer service as well. 
+        We maintain open communication with you throughout the project, providing regular updates and addressing any concerns you might have. 
+        Our goal is to make sure you’re completely satisfied with every step of the process, from the first consultation to the final walkthrough. 
+        We don’t consider the job done until you’re happy with the results because your satisfaction is the ultimate measure of our success.
     </p>
 </section>
 {% include 'last-call.html' %}
