--- a/templates/contact.html
+++ b/templates/contact.html
@@ -23,11 +23,15 @@ active-link
                 Service Areas:
             </h6>
             <p class="description">
-                Denver, Colorado Springs, Pueblo, Fort Collins
+                Denver, Wheat Ridge, Lakewood, Arvada
             </p>
         </div>
     </div>
-    <form action="" method="post" class="contact-form">
+    <form action="https://formsubmit.co/homerevivecontracting@gmail.com" method="post" class="contact-form">
+        <input type="hidden" name="_subject" value="New Form submission!">
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="https://homerevivellc.net/thank-you">
+        <input type="text" name="_honey" style="display:none">
         <div class="input-group">
             <div class="input">
                 <label for="first" class="input-label">First Name *</label>
@@ -65,14 +69,11 @@ active-link
         </div>
     </form>
     <div class="contact-info">
-        <p class="description">
-            123 Main Street Denver, CO 80123
-        </p>
         <div class="contact-link contact-page-link">
-            <a href="mailto:">info@mysite.com</a>
+            <a href="mailto:homerevivecontracting@gmail.com">homerevivecontracting@gmail.com</a>
         </div>
         <div class="contact-link contact-page-link">
-            <a href="tel:+1">(123) 456-7890</a>
+            <a href="tel:+17206438146">(720) 643-8146</a>
         </div>
     </div>
 </section>
