--- a/templates/last-call.html
+++ b/templates/last-call.html
@@ -5,6 +5,6 @@
         Tell us about your project today.
     </h2>
     <div class="btn-area">
-        <a href="" class="btn">Get A Free Estimate</a>
+        <a href="{% url 'contact' %}" class="btn">Get A Free Estimate</a>
     </div>
 </section>
