Remove lazy loading from top row in services page

--- a/templates/services.html
+++ b/templates/services.html
@@ -44,7 +44,7 @@ active-link
 <section class="services">
     <div class="services-list">
         <a href="{% url 'remodel' %}" class="service">
-            <img src="{% static 'images/services/remodel.webp' %}" loading="lazy" alt="Whole home remodel services" class="service-image">
+            <img src="{% static 'images/services/remodel.webp' %}" alt="Whole home remodel services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Whole Home Remodels
@@ -55,7 +55,7 @@ active-link
             </div>
         </a>
         <a href="{% url 'exterior-painting' %}" class="service">
-            <img src="{% static 'images/services/exteriors.webp' %}" loading="lazy" alt="Exterior painting services" class="service-image">
+            <img src="{% static 'images/services/exteriors.webp' %}" alt="Exterior painting services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Exterior Painting
@@ -66,7 +66,7 @@ active-link
             </div>
         </a>
         <a href="{% url 'interior-painting' %}" class="service">
-            <img src="{% static 'images/services/kitchen.webp' %}" loading="lazy" alt="Interior painting services" class="service-image">
+            <img src="{% static 'images/services/kitchen.webp' %}" alt="Interior painting services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Interior Painting
