Compressing images for services page and splitting images for specifics page and services list page

--- a/templates/remodel.html
+++ b/templates/remodel.html
@@ -26,7 +26,7 @@ Denver Home Remodel | Colorado | Home Revive
         <h1 class="title specific-title">
             Denver Home Remodel
         </h1>
-        <p class="specific-decsription description">
+        <p class="specific-description description">
             We are all about turning your vision into a reality. 
             We take a comprehensive approach, managing every detail from start to finish, whether you’re looking to update a single room or completely transform your entire home. 
             With a focus on quality craftsmanship and functional design, we work closely with you to create a space that not only looks stunning but also meets your lifestyle needs. From structural changes to the finishing touches, we ensure that every aspect of the remodel is executed with precision and care. 
