--- a/templates/services.html
+++ b/templates/services.html
@@ -44,7 +44,7 @@ active-link
 <section class="services">
     <div class="services-list">
         <a href="{% url 'remodel' %}" class="service">
-            <img src="{% static 'images/services/remodel.webp' %}" alt="Whole home remodel services" class="service-image">
+            <img src="{% static 'images/services/small/remodel.webp' %}" alt="Whole home remodel services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Whole Home Remodels
@@ -55,7 +55,7 @@ active-link
             </div>
         </a>
         <a href="{% url 'exterior-painting' %}" class="service">
-            <img src="{% static 'images/services/exteriors.webp' %}" alt="Exterior painting services" class="service-image">
+            <img src="{% static 'images/services/small/exteriors.webp' %}" alt="Exterior painting services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Exterior Painting
@@ -66,7 +66,7 @@ active-link
             </div>
         </a>
         <a href="{% url 'interior-painting' %}" class="service">
-            <img src="{% static 'images/services/kitchen.webp' %}" alt="Interior painting services" class="service-image">
+            <img src="{% static 'images/services/small/kitchen.webp' %}" alt="Interior painting services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Interior Painting
@@ -79,7 +79,7 @@ active-link
     </div>
     <div class="services-list">
         <a href="{% url 'fence' %}" class="service">
-            <img src="{% static 'images/services/fence.webp' %}" loading="lazy" alt="Fence repair & installation services" class="service-image">
+            <img src="{% static 'images/services/large/fence.webp' %}" loading="lazy" alt="Fence repair & installation services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Fence Repair & Installation
@@ -90,7 +90,7 @@ active-link
             </div>
         </a>
         <a href="{% url 'deck' %}" class="service">
-            <img src="{% static 'images/services/deck.webp' %}" loading="lazy" alt="Deck repair & installation services" class="service-image">
+            <img src="{% static 'images/services/small/deck.webp' %}" loading="lazy" alt="Deck repair & installation services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Deck Repair & Installation
@@ -101,7 +101,7 @@ active-link
             </div>
         </a>
         <a href="{% url 'appliance-repair' %}" class="service">
-            <img src="{% static 'images/services/appliance-repair.webp' %}" loading="lazy" alt="Appliance repair services" class="service-image">
+            <img src="{% static 'images/services/small/appliance-repair.webp' %}" loading="lazy" alt="Appliance repair services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Appliance Repair
@@ -114,7 +114,7 @@ active-link
     </div>
     <div class="services-list">
         <a href="{% url 'tile-installation' %}" class="service">
-            <img src="{% static 'images/services/tile.webp' %}" loading="lazy" alt="Tile installation services" class="service-image">
+            <img src="{% static 'images/services/small/tile.webp' %}" loading="lazy" alt="Tile installation services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Tile Installation
@@ -125,7 +125,7 @@ active-link
             </div>
         </a>
         <a href="{% url 'wood-flooring-installation' %}" class="service">
-            <img src="{% static 'images/services/wood.webp' %}" loading="lazy" alt="Wood flooring installation services" class="service-image">
+            <img src="{% static 'images/services/small/wood.webp' %}" loading="lazy" alt="Wood flooring installation services" class="service-image">
             <div class="service-info">
                 <h3 class="service-title">
                     Wood Flooring Installation
