Fixing image preloads for services after folder updates

--- a/templates/deck.html
+++ b/templates/deck.html
@@ -13,7 +13,7 @@
 <link rel="canonical" href="https://homerevivellc.net/deck-repair-installation">
 <link rel="alternate" href="https://homerevivellc.net/deck-repair-installation" hreflang="en"/>
 <!-- Preload Images here -->
-<link rel="preload" href="{% static 'images/services/deck.webp' %}" as="image">
+<link rel="preload" href="{% static 'images/services/large/deck.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
