--- a/templates/fence.html
+++ b/templates/fence.html
@@ -13,7 +13,7 @@
 <link rel="canonical" href="https://homerevivellc.net/fence-repair-installation">
 <link rel="alternate" href="https://homerevivellc.net/fence-repair-installation" hreflang="en"/>
 <!-- Preload Images here -->
- <link rel="preload" href="{% static 'images/services/fence.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/large/fence.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
