--- a/templates/interior-painting.html
+++ b/templates/interior-painting.html
@@ -13,7 +13,7 @@
 <link rel="canonical" href="https://homerevivellc.net/interior-painting">
 <link rel="alternate" href="https://homerevivellc.net/interior-painting" hreflang="en"/>
 <!-- Preload Images here -->
- <link rel="preload" href="{% static 'images/services/kitchen.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/large/kitchen.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
