--- a/templates/tile.html
+++ b/templates/tile.html
@@ -13,7 +13,7 @@
 <link rel="canonical" href="https://homerevivellc.net/tile-installation">
 <link rel="alternate" href="https://homerevivellc.net/tile-installation" hreflang="en"/>
 <!-- Preload Images here -->
- <link rel="preload" href="{% static 'images/services/tile.webp' %}" as="image">
+ <link rel="preload" href="{% static 'images/services/large/tile.webp' %}" as="image">
 {% endblock %}
 
 {% block title %}
