update contact form

--- a/templates/home.html
+++ b/templates/home.html
@@ -176,7 +176,8 @@ active-link
         </div>
     </div>
     <form action="https://formsubmit.co/homerevivecontracting@gmail.com" method="post" class="contact-form">
-        <input type="hidden" name="_subject" value="New Form submission!">
+        <input type="hidden" name="_url" value="https://homerevivellc.net">
+        <input type="hidden" name="_subject" value="New Contact Form submission!">
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_next" value="https://homerevivellc.net/thank-you">
         <input type="text" name="_honey" style="display:none">
