--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
         <link rel="preload" href="{% static 'css/style.css' %}" as="style">
         <link rel="preload" href="{% static 'js/script.js' %}" as="script">
         <link rel="preload" href="{% static 'images/logo/favicon.ico' %}" as="image">
-        <link rel="preload" href="{% static 'images/logo/logo transparent.png' %}">
+        <link rel="preload" href="{% static 'images/logo/logo transparent.png' %}" as="image">
         <link rel="stylesheet" href="{% static 'css/style.css' %}">
         <link rel="icon" type="image/ico" href="{% static 'images/logo/favicon.ico' %}" >
 
